@@ -1,19 +1,25 @@
 const {Schema, model} = require('mongoose')
-const URLSlugs = require('mongoose-url-slugs');
-const tr = require('transliter');
 
 const schema = new Schema(
   {
     title: {
       type: String,
-      required: true
     },
     body: {
+      type: String
+    },
+    url: {
       type: String
     },
     userId: {
       type: Schema.Types.ObjectId,
       ref: 'User'
+    },
+    status: {
+      type: String,
+      enum: ['published', 'draft'],
+      required: true,
+      default: 'published'
     },
     commentCount: {
       type: Number,
@@ -34,13 +40,6 @@ schema.statics = {
     );
   }
 };
-
-schema.plugin(
-  URLSlugs('title', {
-    field: 'url',
-    generator: text => tr.slugify(text)
-  })
-);
 
 schema.set('toJSON', {
   virtuals: true
