@@ -12,7 +12,7 @@ async function posts(req, res) {
     const page = req.params.page || 1;
   
     try {
-      const posts = await models.Post.find({})
+      const posts = await models.Post.find({status: 'published'})
         .skip(perPage * page - perPage)
         .limit(perPage)
         .populate('userId')
@@ -50,7 +50,8 @@ async function posts(req, res) {
     } else {
       try {
         const post = await models.Post.findOne({
-          url
+          url,
+          status: 'published'
         });
   
         if (!post) {
