@@ -1,0 +1,39 @@
+<%- include('../layout/header.ejs')%>
+
+  <div class="main">
+    <div class="container">
+      <div class="content add-post">
+        <form method="post" class="post-form">
+          <% if (post.title) { %>
+            <h2>Редактирование поста</h2>
+          <% } else { %>
+            <h2>Создание поста</h2>
+          <% }  %>
+          
+                <div class="form-group">
+                  <label for="post-title">Заголовок</label>
+                  <input type="text" id="post-title" name="title" value="<%=post.title %>" />
+                </div>
+                <div class="form-group">
+                  <label for="post-body">Текст</label>
+                  <textarea id="post-body"><%= post.body %></textarea>
+                </div>
+                <input type="hidden" id="post-id" name="postId" value="<%= post.id %>">
+                <div class="buttons">
+                  <button class="save-button secondary-inverse">Сохранить как черновик</button>
+                  <button class="publish-button">Опубликовать</button>
+                </div>
+        </form>
+
+        <form method="POST" enctype="multipart/form-data" id="fileinfo">
+          <input type="file" name="file" id="file" required />
+          <button class="upload-button">Загрузить</button>
+        </form>
+      </div>
+
+      <%- include('../layout/sidebar.ejs')%>
+
+    </div>
+  </div>
+
+<%- include('../layout/footer.ejs')%>
